@@ -28,7 +28,7 @@ __forceinline void FATALERROR_STR(std::string str) {
 	FATALERROR(str.c_str());
 }
 
-#define VER "dev-10"
+#define VER "dev-11"
 
 #pragma comment(lib, "OpenGL32.lib")
 #pragma comment(lib, "crypt32.lib")
